--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-appscript==1.2.2
-bson==0.5.10
 certifi==2023.7.22
 charset-normalizer==3.3.1
 idna==3.4
@@ -8,6 +6,8 @@ psutil==5.9.6
 python-dateutil==2.8.2
 requests==2.31.0
 six==1.16.0
+tdqm==0.0.1
+tqdm==4.66.1
 urllib3==2.0.7
 xlrd==2.0.1
 xlwings==0.30.12
