--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,8 @@
-annotated-types==0.6.0
-anyio==3.7.1
 certifi==2023.7.22
 charset-normalizer==3.3.1
-click==8.1.7
-coloredlogs==15.0.1
-cyvcf2==0.30.22
-et-xmlfile==1.1.0
-fastapi==0.104.1
-h11==0.14.0
-humanfriendly==10.0
-idna==3.4
-lxml==4.9.3
-numpy==1.26.1
 openpyxl==3.1.2
 pandas==2.1.2
-psutil==5.9.6
 python-dateutil==2.8.2
-pytz==2023.3.post1
-requests==2.31.0
-six==1.16.0
-sniffio==1.3.0
-starlette==0.27.0
 tqdm==4.66.1
-typing_extensions==4.8.0
-tzdata==2023.3
 urllib3==2.0.7
-xlrd==2.0.1
+vcfpy==0.13.6
