trying allele dataset

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,4 @@ services:
     volumes:
       - ./output_docs:/usr/src/app/output_docs
       - ./datasheets:/usr/src/app/datasheets
+      - ./scripts/datasheet/conf:/usr/src/app/scripts/datasheet/conf
