updating readme and conf files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,4 @@ services:
       - ./output_docs:/usr/src/app/output_docs
       - ./datasheets:/usr/src/app/datasheets
       - ./scripts/datasheet/conf:/usr/src/app/scripts/datasheet/conf
+      - ./files/vcf/files_to_read:/usr/src/app/files/vcf/files_to_read
