--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     container_name: ri-tools
     volumes:
       - ./output_docs:/usr/src/app/output_docs
-      - ${PWD}/conf.py:/usr/src/app/conf.py
+      - ./conf:/usr/src/app/conf
       - ./scripts/datasheet/conf:/usr/src/app/scripts/datasheet/conf
       - ./files/vcf/files_to_read:/usr/src/app/files/vcf/files_to_read
       - ./csv:/usr/src/app/csv
