--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.6.0
 certifi==2023.7.22
 charset-normalizer==3.3.1
 openpyxl==3.1.2
@@ -7,3 +8,7 @@ tqdm==4.66.1
 urllib3==2.0.7
 cyvcf2==0.30.28
 pymongo==4.6.1
+pydantic==2.6.4
+pydantic_core==2.16.3
+typing==3.7.4.3
+typing_extensions==4.11.0
