--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     command: --wiredTigerCacheSizeGB 4
     hostname: mongo
     ports:
-      - 27017:27017
+      - 27018:27017
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
@@ -59,3 +59,38 @@ services:
       - ./phenopackets-to-BFF/:/usr/src/app/examples
     networks:
       - my-app-network
+
+  seqrepo:
+    image: biocommons/seqrepo:2024-12-20
+    volumes:
+      - seqrepo_vol:/usr/local/share/seqrepo
+
+  seqrepo-rest-service:
+    # Test: curl http://localhost:5000/seqrepo/1/sequence/refseq:NM_000551.3
+    image: biocommons/seqrepo-rest-service:0.2.2
+    volumes:
+      - seqrepo_vol:/usr/local/share/seqrepo
+    depends_on:
+      - seqrepo
+    command: seqrepo-rest-service -w /usr/local/share/seqrepo/2024-12-20
+    network_mode: bridge
+    ports:
+      - 5000:5000
+
+  uta:
+    # Test:
+    # psql -XAt postgres://anonymous@localhost/uta -c 'select count(*) from uta_20241220.transcript'
+    # 314227
+    image: biocommons/uta:uta_20241220
+    environment:
+      - POSTGRES_PASSWORD=some-password-that-you-make-up
+    volumes:
+      - uta_vol:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
+
+volumes:
+  seqrepo_vol:
+    external: true
+  uta_vol:
+    external: true
