--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     image: mongo:5
     hostname: mongo
     ports:
-      - 27018:27017
+      - 27030:27017
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
@@ -36,6 +36,7 @@ services:
       - ./mongo-init/:/docker-entrypoint-initdb.d/:ro
       - ./output_docs/data/db:/data/db
       - ./output_docs/data/configdb:/data/configdb
+      - ./mongo-init/mongod.conf:/etc/mongod.conf:ro
     command: ["--config", "/etc/mongod.conf"]
     networks:
       - my-app-network
